some minor work on section 8

--- a/recoltes-et-semailles/part-0-letter/8.md
+++ b/recoltes-et-semailles/part-0-letter/8.md
@@ -1,26 +1,28 @@
 ### 8. "My family" &mdash; or the connivance
 It is not my intention in this letter to review all the "highlights" [fr: moments forts] (or all the "critical times" [fr: moments sensibles]) in the writing of Harvests and Sowings, or in that of its stages<sup>102</sup>(&ast;). Suffice it to say that there have been, in this work, four clearly marked big stages or four "breaths" &mdash; like the breaths of respiration, or like the successive _waves_ in an emerging train of waves, I cannot say how, of these large silent bodies, immobile and moving, without limits and without name, of an unknown and bottomless sea that is "me", or rather, of a sea infinitely larger and deeper than this "me" that it carries and that it nourishes. These "breaths" or these "waves" are materialized in the four parts of Harvests and Sowings presently written. Each wave came without my having called upon it nor in the least foreseen it, and at no time could I have said where it was going to take me nor when it would end. And when it had ended and a new wave already followed it, even at a time when I always thought it had reached the end of my momentum (which would also be, at the bitter end, the end of Harvests and Sowings!), while I was however already being lifted and carried toward another breath of the same vast movement. It is only with the retreat that this appears clearly and that it reveals itself unequivocally as a _structure_ in what had been experienced as an act and as a movement.
 
-And surely, this movement did not end with my final point (very provisional!) in Harvests and Sowings, and will not end any more with the final point of this letter to you, which is one of the "times" of this movement. And it was not born on a day of June 1983, or of February 1984, when I sat down in front of my machine to write [...] (or resume) a certain introduction to a certain mathematical publication. It was born (or rather, it was reborn...) nine years ago, on a certain day of which I have kept recollection (while so many distant or close things of my past have whittled away...), the day when meditation appeared in my life...
+And surely, this movement did not end with my final point (very provisional!) in Harvests and Sowings, and will not end any more with the final point of this letter to you, which is one of the "times" of this movement. And it was not born on a day of June 1983, or in February 1984, when I sat down in front of my machine to write [...] (or resume) a certain introduction to a certain mathematical publication. It was born (or rather, it was reborn...) nine years ago, on a certain day of which I have kept recollection (while so many distant or close things of my past have whittled away...), the day when meditation appeared in my life...
 
 But I digress again, letting myself be carried away (and taken away... [fr: porter/emporter]) by the images and associations born in the moment, instead of holding wisely to the thread of an "aim", of a plan. My aim today was to follow up on the account, as brief as it may be, of the "discovery of the Burial" last April, at a moment when since two weeks I thought to have finished Harvests and Sowings &mdash; as if fallen on me from a waterfall above, in the space of barely three or four weeks, discoveries one greater and more incredible than the other &mdash; so big and so crazy even that still over months, I had the biggest trouble "believing the testimony of my healthy faculties", to liberate myself from an insidious _incredulity_ in the face of the evidence<sup>103</sup>(&ast;). This secret and tenacious incredulity did not dissipate until finally last October (six months after the discovery of the "the Burial in all its splendor", following the visit of my friend and former student (occult, it is true) Pierre Deligne<sup>104</sup>(&ast;&ast;). For the first time, I then saw myself confronted with the Burial no longer through _texts_, talking to me (in admittedly eloquent terms!) about the denigration, the pillage and the massacre of a work, and of the burial (in the form of the absent master) of a certain style and of a certain approach to mathematics &mdash but in a way this time direct and tangible, under familiar features and by a well known voice, with affable and ingenuous intonations. The burial was finally in front of me, "in the flesh", under busy and anodine traits that I recognized well by this time, but that I regarded for the first time with new eyes, a new attention. Here is deploying himself before me the one who, in the course of my reflection of the preceding months, revealed himself as the Officiating Priest at my solemn funeral, as the "priest in chasuble" at the same time as the chief architect and the main "beneficiary" of an "operation" without precedent, hidden inheritor of a work delivered to derision and pillage...
 
 This encounter placed itself at the beginning of the "third wave" in Harvests and Sowings, when I had just engaged in a long meditation on the yin and the yang, in the pursuit of an elusive and tenacious association of ideas. At the time, this short episode only left the trace of an echo of a few lines, in passing. It marked however an important moment, whose fruits didn't appear clearly until months later.
 
-There was a second such moment of confrontation with "the Burial in the flesh". It had been barely ten days, and it was coming to relaunch another time, "at the last minute", a never ending investigation which ceaselessly started again. This time, it was a simple phone call to Jean-Pierre Serre <sup>105</sup>(&ast;). This conversation came "aimlessly" [fr: à bâtons rompus] to confirm in a striking way beyond all expectations, what (just a few days before) I had come to explain at length<sup>106</sup>(&ast;&ast;), and almost unwillingly, on the subject of the role played by Serre in my Burial and on a "secret agreement" in him about what took place "right under his nose", without pretending like nothing was seen or sensed [fr: de rien voir ni de rien sentir].
+There was a second such moment of confrontation with "the Burial in the flesh". It had been barely ten days, and it was coming to relaunch another time, "at the last minute", a never ending investigation which ceaselessly started again. This time, it was a simple phone call to Jean-Pierre Serre <sup>105</sup>(&ast;). This conversation came "aimlessly" [fr: à bâtons rompus] to confirm in a striking way beyond all expectations, what (just a few days before) I had come to explain at length<sup>106</sup>(&ast;&ast;), and almost unwillingly, on the subject of the role played by Serre in my Burial and on a "secret agreement" in him about what took place "right under his nose", without the recognition of him seeing or sensing anything.
 
-Here again, appropriately, the conversation was all "cool" and amicable, and visibly these amicable dispositions in Serre in my regard are also the most sincere and veritable ones. This does not prevent that this time I could truly _see_, or "touch" as I would like to write, this "agreement" [fr: acquiescement] that I had just finished to admit to myself; "secret" no doubt (as I wrote earlier) but above all _rushed_ [fr: empressé], as I could then see it without any possibility of doubt. A rushed and unreserved agreement, so that what needs to be buried would be buried, and so that, wherever [...]
+Here again, appropriately, the conversation was all "cool" and amicable, and visibly these amicable dispositions in Serre in my regard are also the most sincere and veritable ones. This does not prevent that this time I could truly _see_, or "touch" as I would like to write, this "agreement" [fr: acquiescement] that I had just finished to admit to myself; "secret" no doubt (as I wrote earlier) but above all _rushed_ [fr: empressé], as I could then see it without any possibility of doubt. A rushed and unreserved agreement, so that what needs to be buried would be buried, and so that, wherever this appears desirable and _whatever the means_, a paternity real (which Serre knows at first hand) and undesirable, being replaced by a paternity that is artificial and welcome...<sup>107</sup>(&ast;&ast;&ast;) It was a striking confirmation of an intuition that had appeared already one year earlier, when I wrote:<sup>108</sup>(&ast;)
+
+> "Seen in this light<sup>109</sup>(&ast;&ast;), the principal officiate Deligne appears not as someone who would have shaped a method in the image of deep forces determining his own life and his acts, but rather like the ideal _instrument_ (because of his role as "legitimate inheritor"<sup>110</sup>(&ast;&ast;&ast;)) of a _collective will_ of flawless coherence, endeavouring to the impossible task of erasing both my name and my personal style of contemporary mathematics."
+
+If Deligne appeared to me then as the ideal "instrument" (at the same time as the first and principal "beneficiary") of a "collective will of flawless coherence", Serre now appears to me as _the incarnation_ of this same collective will, and as the _guarantor_ of its unreserved agreement; an agreement on all the tricks and innumerable swindles and [...] "operations" of collective mystification and shameless appropriation, as long as these contributing to this "impossible task" against my deceased self, or against another<sup>111</sup>(&ast;&ast;&ast;&ast;) who dared to call for me and to present, against all odds, as "continuator of Grothendieck".
+
+This is one of the paradoxical and disconcerting aspects, among numerous others in the Burial, that this should be the work first of all, not to say exclusively, of those who were my friends or my students, in a world where I never knew any enemies. It is in this regard above all, I think, that Harvests and Sowings concerns you more than another, and that this letter that I am in the course of writing to you seeks to be an _interpellation_ [...]. For if you are a mathematician, and if you are one of those who were my students, or who were my friends, you are certainly not unacquainted with the Burial, either through action or through complicity, and not least through your silence toward me, on the subject of a thing which is unravelling right at your doorstep. And if (extraordinarily) you greet me with humble words and the testimony that [...], rather than remaining enclosed behind your closed door and dismissing these ill-advised messagers, you will then learn learn, perhaps, that what has been buried by all and with your participation (active, or by tacit agreement), is not only the work of another, fruit and living testimony of my love affairs with mathematics; but still at a secret level that this burial (which never said its name...) and [...], it is a living and essential part of your own self, of your original power to know, to love and to create, that it has buried you more by your own hands in the person of another. <sup>[read this section again]</sup>
+
+Among my students, Deligne had occupied a special place, on which I hear myself at length in the course of the reflection<sup>112</sup>(&ast;). He was, by far, the "closest", and also the only (student or not) to have assimilated intimately and made into his own<sup>113</sup>(&ast;&ast;) a vast vision which was born and grew up in me already long before our encounter. And among all of my friends sharing with me a common passion for mathematics, it was Serre, who had at the same time become a bit of an elder, who was the closest (and by far, furthermore), like the one (notably) who had for a decade played in my work a unique role of "detonator" for certain of my big investments, and for most of the big key ideas that inspired my mathematical thoughts in the course of the fifties and sixties, until the moment of my departure. This very particular relation that one and the other had to my person is not without links, certainly, to the least exceptional ones of these, that assured them an equally exceptional ascending [...] the mathematicians of their generation, and of those that have followed. Apart from these common points, the pemperaments and the manners of Serre and of Deligne seem to me moreover as dissimilar as possible, diametrically opposed in many regards.
+
+Be this as it may, if there were mathematicians who, in one capacity or another, were "close" to myself and to my work (and, what's more, known for this), it's Serre and Deligne: the one, an elder and a source of inspiration in my work during a crucial period of gestation of a vision; the other, the most gifted of my students, for whom I was in turn (and am still, Burial or not...) his principal (and secret...) source of inspiration<sup>114</sup>(&ast;). If a Burial was set in motion in the aftermath of my departure (having "died" in due form), it
 
 [...]
 
-<sup>107</sup>(&ast;&ast;&ast;)
-<sup>108</sup>(&ast;)
-<sup>109</sup>(&ast;&ast;)
-<sup>110</sup>(&ast;&ast;&ast;)
-<sup>111</sup>(&ast;&ast;&ast;&ast;)
-<sup>112</sup>(&ast;)
-<sup>113</sup>(&ast;&ast;)
-<sup>114</sup>(&ast;)
 <sup>115</sup>(&ast;&ast;)
 
 ---
@@ -39,21 +41,24 @@ Here again, appropriately, the conversation was all "cool" and amicable, and vis
 
 <sup>108</sup>(&ast;) This quote is taken from the same note (see the preceding footnote), at the same page.
 
-<sup>109</sup>(&ast;&ast;) In the light of [...]
+<sup>109</sup>(&ast;&ast;) "In the light of" this deliberate comment, of which [...], to eliminate "undesirable paternities" at all costs ("intolerable", even, to reuse the expression employed in the cited note).
 
-<sup>110</sup>(&ast;&ast;&ast;)
+<sup>110</sup>(&ast;&ast;&ast;) This role of "inheritor" of Deligne is a role at once hidden (while not a line published by Deligne can make you suspicious that he may have learned a thing from my mouth), and at the same time clearly sensed and admitted by all. This here is one of the typical aspects of the double game of Deligne and of his particular "style", which he knew to play masterfully on this ambiguity, and collect the advantages of this tacit role of inheritor, all while disavowing the deceased master and while taking the lead of the operations of the burial on a large scale.
 
-<sup>111</sup>(&ast;&ast;&ast;&ast;)
+<sup>111</sup>(&ast;&ast;&ast;&ast;) Here I am thinking about _Zoghman Mebkhout_, of which it is the question for the first time in the [Introduction, 6 ("The Burial")](../table-of-contents.md#intro-enterrement), later in the note ["Mes orphelins" (n&deg; 64)](../table-of-contents.md#mes-orphelins), and in the notes (written later on, after the discovery of the Burial) ["Echec d'un enseignement (2) &mdash; ou création et fatuité"](../table-of-contents.md#echec-2) and ["Un sentiment d'injustice et d'impuissance" (n&deg;s 44', 44'')](../table-of-contents.md#sentiment). I discover the iniquitous operation of retraction [fr: escamotage] and appropriation of the work of the pioneer Mebkhout, throughout the eleven notes forming Cortege VII of the Burial, ["Le Colloque &mdash; ou faisceaux de Mebkhout et Perversité" (n&deg;s 75-80)](../table-of-contents.md#colloque-faisceaux). An investigation and a more detailed account of this (fourth and last) "operation" forming the most expanded part of the investigation "Les quatre opérations", under the reasonable name [...].
 
-([n&deg; ](../table-of-contents.md#))
-([n&deg; ](../table-of-contents.md#))
-([n&deg; ](../table-of-contents.md#))
-([n&deg; ](../table-of-contents.md#))
+<sup>112</sup>(&ast;) See especially, on this matter, the group of seventeen notes ["Mon ami Pierre" (n&deg;s 60-71)](../table-of-contents.md#mon-ami) in HS II.
 
-<sup>112</sup>(&ast;)
-
-<sup>113</sup>(&ast;&ast;)
+<sup>113</sup>(&ast;&ast;) This "vast vision", that Deligne has well and truly "assimilated intimately and made into his own", had exercised a powerful fascination on him, and it continues to fascinate him notwithstanding, while an imperious force at the same time pushes him to destroy it, to burst its fundamental unity and to seize the shattered pieces. Thereby, his hidden antagonism toward a disowned and "deceased" master is the expression of a division in his being, which has deeply marked his work after my departure &mdash; work that [...]
 
 <sup>114</sup>(&ast;)
 
 <sup>115</sup>(&ast;&ast;)
+
+[""](../table-of-contents.md#)
+[""](../table-of-contents.md#)
+
+([n&deg; ](../table-of-contents.md#))
+([n&deg; ](../table-of-contents.md#))
+([n&deg; ](../table-of-contents.md#))
+([n&deg; ](../table-of-contents.md#))
