a whole lot of work on section 10

--- a/recoltes-et-semailles/part-0-letter/10.md
+++ b/recoltes-et-semailles/part-0-letter/10.md
@@ -1,7 +1,31 @@
 ### 10. Four waves in motion
 
-As usual, this letter does not look at all like what I intended to put down. In particular I thought about making a small "update" in the Burial: this is what happened in broad terms, believe it or not (myself I found it difficult to believe it...), but this is nevertheless it, unmistakable even, whether you like it or not, publications black on white in periodicals or books, on such date and such page, all you have to do is look &mdash; moreover all is unscrewed by the menu in Harvests and Sowings; see "[Quatre Operations](../table-of-contents.md#part-4)" for such notes &mdash; take it or leave it! And if you prefer to abstain from reading me, others will take care of it in your stead...
+As usual, this letter does not look at all like what I intended to put down. In particular I thought about making a small "rundown" (fr: topo) on the Burial: this is what happened in broad terms, believe it or not (myself I found it difficult to believe it...), but this is nevertheless it, unmistakable even, whether you like it or not, publications black on white in periodicals or books, on such date and such page, all you have to do is look &mdash; moreover all is unscrewed by the menu in Harvests and Sowings; see "[Quatre Operations](../table-of-contents.md#part-4)" for such notes &mdash; take it or leave it! And if you prefer to abstain from reading me, others will take care of it in your stead...
 
-Finally nothing like that happened &mdash; and although this letter is already heading toward thirty pages, when I was planning on five or six all in all. Even without having made it on purpose, they are essential things that I was lead to tell you, over the pages, even though this "bag" that I was so impatient to empty ([...]), has still not been unpacked!
+In the end nothing like that happened &mdash; even though this letter is already heading toward thirty pages, when I was planning on five or six all in all. Even without having done it on purpose, they are essential things that I was lead to tell you, over the pages, even though this "bag" that I was so impatient to empty ([...]), has still not been unpacked! It does not even tickle me in the fingers, the desire dissipated on the way. I understood that here wasn't the place...
+
+To tell the truth, part IV of Harvests and Sowings (the longest of them all), having the name "The Burial (3)" or "The Four Operations", originated in a "note" intended originally as just "a little rundown", to summarize in broad strokes what was revealed to me in the investigation-in-surprise (and in a rush) of the previous year, continued [?] in part II ("The Burial (1)", or "The clothes of the Emperor of China"). I thought that it would be for a "note" of five of ten pages, not more. In the end, gradually, this restarted the investigation, leading to more than four hundred pages &mdash; nearly twice the amount that I was supposed [...]! [...] It is a little idiotic, it's true. But there will always be time to add in a third part of the Introduction (which is no longer just ten or twenty pages), before giving my notes to a printer.
+
+The five parts of Harvests and Sowings (of which the last has not yet been finished, and probably won't be for still a few months) represent an alternation of (three) "meditation" waves and of (two) "investigation" waves. It it there as a reflection, a shortcut, through my life of the last nine years, which have consisted of an alternation, this too, of rising "waves" of two passions which today dominate my life, the passion of meditation and the passion of mathematics. And to tell the truth, the two parts (or "waves") of Harvests and Sowings that I just qualified with the cookie cutter name [?] of "investigation", are precisely those that have arisen directly from my grounding in my past as a mathematician, driven by the mathematical passion in me and by the egotistical attachments which are rooted in it.
+
+The first wave, "Complacency and Renewal", is a first encounter with my past as a mathematician, leading to a meditation on my present, in which I discovered the rooting in this past. Without this having been the least premeditated, certainly, this part lays the "basic tone" for all that follows in Harvests and Sowings, it is as an interior preparation, providential and indispensable, for undertaking the discovery of "The Burial (1) &mdash; or the clothes of the Emperor of China". More than just an "investigation", in fact, this is really the history of this _discovery_ from day to day, of its impact on my being, of my efforts to cope with what thereby tumbled on me from above without warning, coming to situate the incredible in terms of my experience, of what I ended up becoming familiar with, to make it more or less intelligible. This movement opens for a first provisional culmination, in the note "Le Fossoyeur &mdash; ou la Congrégation toute entièr" ([n&deg; 97](../table-of-contents.md#fossoyeur)), a first attempt to discern an explanation and a _meaning_ in something which, for years now and currently in a more acute manner than ever, took the appearance of a formidable defiance to common sense!
+
+The same second movement also opens an "episode of illness"<sup>118</sup>(&ast;), binding me to absolute rest and putting to an end for more than three months all intellectual avtivities. There was a moment when I thought again to have come to the end Harvests and Sowings ([...]). When resuming normal activities, towards the end of September of last year, and readying myself to finally put the last touches in my notes remaining in distress, I still thought to have two or three last notes to add, including one on the subject of the "health incident" that I had just gone thought. In fact, from week to week and from month to month, there were still a thousand pages left to come &mdash; more than twice of what had already been writen &mdash; and by this time, it was clear that I had _never_ finished<sup>119</sup>(&ast;)! In fact, this long interruption, during which I practically lost contact with a substance which was all warm (and even burning!) by the time of quitting, practically forced me to revisit this substance with new eyes, if I didn't want to limit myself to "close" foolishly the ultimate end of a "program" with which I had lost living contact.<sup>[ungrammatical]</sup>
+
+Thus is born the third wave in this vast movement that is Harvests and Sowings &mdash; a long "wave-meditation" on the theme of yin and yang, the "dark" and "bright" hillsides in the dynamics of things and in human existance. As the result of the desire to a more thorough comprehension of deep forces in the work of the Burial, this meditation immediately gained autonomy and an own unity, and carried itself from the beginning toward what's the most universal, as well as toward what's most intimately personal. It is in the course of this meditation that I discovered this thing (evident to tell the truth, as soon as one asks the question), that in my spontaneous approach to the discovery of things, whether they be mathematical or otherwise, the "base tone" is "yin", "feminine"; and also and especially, that in contrast to what happens most of the time, I remained faithful to this original nature in me<sup>120</sup>(&ast;&ast;), without ever influencing or correcting it to conform with dominant values [...] in the surrounding environments. This discovery first appeared to me as a simple curiosity. Only little by little did an essential key reveal itself to me for a comprehention of the Burial. What's more &mdash; and this is a thing which appears to me even more far-reaching &mdash; I see this now very clearly and without the trace of doubt: that if, with by no means exceptional intellectual gifts, I have still been able to give my full extent in my mathematical work, and produce a work and give birth to a vast, powerful and fertile vision, I owe it to nothing but this fidelity, to this absence of all concern with conforming to norms, thanks to which I abandoned myself with total confidence to this drive to original understanding, without sharpening [?] or amputating anything [...].
+
+It is however not the creativity and its sources that find themselves at the center of attention in this meditation "The Burial (2) &mdash; or the Key of Ying and Yang", but it is rather "the conflict", that state of blockage of the creativity, or the dispersion of the creative energy by the confrontation, in the phyche, of opposing forces (most often hidden). The aspects of _violence_, of violence that is (in appearance) "free-of-charge", "for its own sake", have disconcerted me more than once in the Burial, and made a resurgence in a multitude of similar experienced situations. The experience of this violence has been in my life like "hard-core, irreducible, of the experience of conflict". Never before have I confronted myself with the formidable mystery of the very existence and of the universality of this violence in human existence in general, and in mine in particular. It is this mystery which is at the center of attention, throughout the second half  (the side of "yin", or "decline") in the meditation on yin and yang. It is in the course of this part of the meditation that a deeper vision progressively emerged, of the meaning of the Burial, and of forces that it expresses. It is also that part of Harvests and Sowings which has been the most fertile, it seems to me, at the level of understanding of myself, by bringing me in contact with key questions and situations, and by making me realize just this "key" [fr: nevralgique] character, which until last year still remained elusive.
+
+Once at the end of this interminable "digression" on yin and yang, I was still left, more or less, with my "two or three notes" still to be written (plus yet one or two others, at the very most, of which one had already found its name "The four operations"...), before the end of Harvests and Sowings. We know what comes next: these "last few notes" ended up taking up the most of Harvests and Sowings, nearly five hundred pages. This is thus the "fourth wave" of the movement. It is also the third and last part of the Burial, and I have given it the name "The Four Operations", which is also that of the group of notes ("Les quatre opérations operations (sur une dépouille)") that make up the core of the fourth breath of the reflection. Here, in Harvests and Sowings, is the "investigative" part in the strictest sense of the word &mdash; with these two cents, however, that this investigation not limit itself to a purely "technical" aspect, in other words to the aspect of the "detective", but that the reflection here is driven first and foremost, like everywhere else in Harvests and Sowings, by the desire to know and to comprehend. The tone here is certainly more "muscular" than in the first part of the Burial, where I was still rubbing my eyes a little [...]! This doesn't prevent that the facts uncovered throughout the pages often came at the right time, to illustrate on the fly many things that were only lightly touched in passing here or there, without incarnating in precise and vivid examples. It is also in this part that the mathematical digressions take an important place, stimulated by a renewed contact (by the necessities of the investigation) with a substance that I had lost sight of for fifteen years. It was also, at the other end of the spectrum, the stories on the [...] of the misadventures of my friend Zoghman Mebkhout (to which this part is dedicated), in the hands of a high-calibre and unscrupulous "maffia", which he had not dreamed of when embarking on this subject (certainly enthralling, and anodyne in appearance) of the cohomology of varieties [...]. For a common thread [...]. [...]
+
+This fourth breath stretched across more than four months on end, from mid-february and toward the end of june. It is in this part of the reflection especially,  by a meticulous and stubborn "work in pieces", that was established little by little over the days and the pages, a concrete, tangible contact with the reality of the Burial; that I come to "familiarize" myself with it, in short, every so slightly, notwithstanding the visceral reactions of refusal that were generated (and that continue to be suscitated) in me, impeding a veritable apprehension. This long reflection takes its departure with a retrospective on the visit of Deligne (of which it has already been the question in this letter), and it concludes with a reflection "in the last minute" on my relation to Serre and to the role of Serre in the Burial<sup>121</sup>(&ast;). This was to have tacitly taken Serre "off the hook", in favor of this "taboo" of which I have already spoken, which now seems to me perhaps the most serious shortcoming which remained in my comprehension of the Burial, even up until a month ago &mdash; and it is this "last minute" reflection that suddenly appears to me like the most important thing that this "fourth breath" of Harvests and Sowings has brought me, for a less tenuous apprehension, expanding more on the Burial and the forces that it expresses.
+
+----
 
 <sup>118</sup>(&ast;)
+
+<sup>119</sup>(&ast;)
+
+<sup>120</sup>(&ast;&ast;) This "fidelity to my original nature" has in fact in no way been total. For a long time, it was limited to my mathematical work, while everywhere else and notably in my relations to others, I was following the general motion of valuing and giving primacy to traits in me perceived as "manly", and repressing traits that were "feminine". This is sufficiently detailed in the group of notes "Histoire d'une vie: un cycle en trois mouvements" ([n&deg; 107-110](../table-of-contents.md#histoire-vie)), which practically opens The Key of Ying and Yang.
+
+<sup>121</sup>(&ast;)
