--- a/recoltes-et-semailles/part-3-yinyang/6.md
+++ b/recoltes-et-semailles/part-3-yinyang/6.md
@@ -1,9 +1,9 @@
 ### (6) Mathematics yin and yang
 
 #### a. The most "macho" art there is
-(November 5) It's been a while that I have intended to speak about yin and yang in mathematics. The two aspects of yin and yang in a mathematical work, or in an approach to mathematics, appeared to me only in the course of the reflection over the last seeks on the yin and the yang. I was planning to probe a tiny bit in these notes this double aspect, which would be the most natural way of "getting back on topic" [fr: revenir à mes moutons], in these notes which are supposed to constitute a retrospective on "the past of a mathematician".
+(November 5) It's been a while that I have intended to speak about yin and yang in mathematics. The two aspects of yin and yang in a mathematical work, or in an approach to mathematics, appeared to me only in the course of the reflection over the last weeks on the yin and the yang. I was planning to probe a tiny bit in these notes this double aspect, which would be the most natural way of "getting back on topic" [fr: revenir à mes moutons], in these notes which are supposed to constitute a retrospective on "the past of a mathematician".
 
-This which was clear to me from my first reflections on yin and yang (five years ago), was that "doing maths" is maybe the _most yang_, the most "masculine" among all known human activities to this day. As a matter of fact, any entirely intellectual activity, like notably the scientific research and, more generally, any activity commonly qualified as "research", is an activity with very strong predominance of yang. I was going to write: "marked by a yang imbalance", and this is indeed the case when this activity comes to absorb the near-totality of the energy of a person. This yang predominance (or imbalance) becomes visible through the calling forth of many yin-yang couples, for which it is clear that it is the term yang especially, not to say exclusively, which is "present" in intellectual work. I limit myself to mentioning a few, that all make part of the same "group" (or of the same "gateway to the world"), that I call the group of "the vague &mdash; the precise". (Note: in this last couple and those which follow, it is the yin term which comes first.)
+This which was clear to me from my first reflections on yin and yang (five years ago), was that "doing maths" is maybe the _most yang_, the most "masculine" among all known human activities to this day. As a matter of fact, any entirely intellectual activity, like notably the scientific research and, more generally, any activity commonly qualified as "research", is an activity with very strong predominance of yang. I was going to write: "marked by a strong imbalance of yang", and this is indeed the case when this activity comes to absorb the near-totality of the energy of a person. This yang predominance (or this imbalance) becomes visible through the calling forth of many yin-yang couples, for which it is clear that it is the term yang especially, not to say exclusively, which is "present" in intellectual work. I limit myself to mentioning a few, that all make part of the same "group" (or of the same "gateway to the world"), that I call the group of "the vague &mdash; the precise". (Note: in this last couple and those which follow, it is the yin term which comes first.)
 
 
 |:-------------: |:-------------:|
@@ -24,13 +24,17 @@ This which was clear to me from my first reflections on yin and yang (five years
 | the whole (the totality) | the part |
 | the global | the local (or the fragmented) |
 
-I just went through my repertoire of yin-yang, and [...] other pairs that make felt the superyang character of this purely intellectual activity. [...] the couple of _body&ndash;spirit_.
+I just went through my repertoire of yin-yang, and met with another good amount of couples whose superyang character makes itself felt in purely intellectual activities. I will only mention the first of those that I have already thought about here: the couple of _body&ndash;spirit_.
 
-Seeing this, it seems to me like among the diverse types of intellectual activity, it is mathematical work which represents the "ultimate extreme-yang". This is no doubt due to [...] its character of extreme abstraction, the fact that it is, to a very large extent, independent of any "support" by a sensory experience and a rational obsevation of the external world, of that where I hear we live and where our bodies move. This extreme character of abstraction distinguishes mathematics from every other science, and mathematical work from every other intellectual work, by being a science or a work "of pure reason". As opposed to experimental sciences and sciences of observation it is also the only science whose results are established by _proofs_ in the most rigorous sense of the word, proceeding by a rigorously codified and in principle infallible _method_, called _"logic"_, for achieving certainties which leave no place for any doubts or reservations, or the possibility of exceptions that would have eluded all cases up until the present. All these extreme-yang features come together in the mathematical work, and in this work only.
+Seeing this, it seems to me like among the diverse types of intellectual activity, it is mathematical work which represents the "ultimate extreme-yang". This is no doubt due to its character of extreme abstraction, to the fact that it is, to a very large extent, independent of any "support" by sensory experience and rational observation of the external world, of the place where I hear we are living and where our bodies move. This extreme character of abstraction distinguishes mathematics from every other science, and mathematical work from every other intellectual work, by being a science or a work "of pure reason". As opposed to experimental sciences and sciences of observation it is also the only science whose results are established by _proofs_ in the most rigorous sense of the word, proceeding by a rigorously codified and in principle infallible _method_, called _"logic"_, for achieving _certainties_ which leave no room for doubts or reservations, or for the possibility of exceptions that would have eluded all cases up until the present. All these extreme-yang features come together in mathematical work, and in this work only.
 
-Certainly these features [...]
+Certainly these features played an important role in attracting my attention from an early age, me who had planned thoroughly for "the lead" and for the extreme yang!<sup>597</sup>(&ast;) Especially after the experience of the war and the concentration camp, subjected to discrimination and prejudice that seemed to defy even rudimentary reason, what really fascinated me in mathematical activity (for as little as I can remember <sup>598</sup>(&ast;) apart from the military variant<sup>[?]</sup> and war, parades, uniforms, standing to attention, [...], and the impeccably organized massacres and  mass graves... in my high school years), was this _power_ which it gave, by virtue of a simple proof, to outbalance even the most reluctant adhesion, in other words to _force_ the assent of other people, be they well-disposed or not &mdash; given only that they agree with me on the "rules of the game" of mathematics. These rules, since my first contact with mathematics in school, in 1940 at the high school of Mende (where I was able to go, despite being interned in the camp of Rieucros five or six kilometers away<sup>[?]</sup>), would have seemed like I knew them, sensed them by instinct, as if I had always known them<sup>599</sup>(&ast;). Surely, I sensed them better than my professor himself, who recited to us without conviction the commonplace usage then on the difference between a "postulate" (in this case, that of Euclid, the only one that we had the good fortune of hearing about...) and an "axiom", or "_the_ proof" of three "cases of equality of triangles", following the class book like a student at his first communion with his prayer book.
 
-[...]
+Five years later, seduced by the sudden prestige of atomic physics, it is however for studies of physics that I registered at the University of Montpellier, with the idea of initiating myself with the mysteries of the structure of matter and of the nature of energy. But I quickly understood that if I wanted to initiate myself with mysteries, this was not by following the course at the college where I had arrived, but by working by my own means, alone, with or without books. As I didn't have the flair, nor the equipment, to learn physics in this way; I returned to the most conductive thing at the time, I started doing mathematics, while following "from afar" a few classes, none of which was able to satisfy me, nor to bring me anything beyond what I could find in the current textbooks. But it still had to be done to pass my exams...
+
+----
+
+<sup>599</sup>(&ast;) Those first contacts are placed in time a little after my my reflections on the quadrature of the circle as a child, which note n&deg; 69 concerns itself with.
 
 #### b. The beautiful stranger
 (November 6) Looking back just now at the notes of yesterday, I was able to assure myself that I had paid attention not to relapse into a certain confusion between the mathematical _work_, an activity with very strong and dominant yang, and "_the_ mathematics" [fr: **la** mathématique]. It is certainly not a coincidence if in French like in German, the word which designates it is of feminine gender, just like _"science"_ [fr: **la** science], which is more general, or the still wider term _"knowledge"_ [fr: **la** connaissance]<sup>600</sup>(&ast;), or also _"substance"_ [fr: **la** substance]. By the mathematician in the proper sense of the word, I mean one who "makes mathematics" (like he "makes love"). There is in fact no ambiguity to the distribution of roles in his relation to mathematics, to the unknown substance thus that he meets, that [...]
